<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orders_all"
            android:icon="@mipmap/shopping_cart"
            android:title="@string/navigation_drawer_menu_all" />
        <item
            android:id="@+id/orders_in_progress"
            android:icon="@mipmap/buy"
            android:title="@string/navigation_drawer_menu_in_progress" />
        <item
            android:id="@+id/orders_canceled"
            android:icon="@mipmap/return_purchase"
            android:title="@string/navigation_drawer_menu_canceled" />
        <item
            android:id="@+id/orders_completed"
            android:icon="@mipmap/shopping_cart_loaded"
            android:title="@string/navigation_drawer_menu_completed" />
        <item
            android:id="@+id/orders_archive"
            android:icon="@mipmap/clock"
            android:title="@string/navigation_drawer_menu_archive" />
    </group>

    <item
        android:id="@+id/upload"
        android:icon="@mipmap/upload"
        android:title="@string/navigation_drawer_menu_upload" />
    <item
        android:id="@+id/refresh_orders"
        android:icon="@mipmap/refresh"
        android:title="@string/navigation_drawer_menu_refresh" />
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/settings_order"
                android:icon="@mipmap/settings"
                android:title="@string/navigation_drawer_menu_settings" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_menu_logout" />
        </menu>
    </item>

</menu>
