<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_settings"
        android:orderInCategory="100"
        android:title="@string/action_check"
        app:showAsAction="" />
    <item
        android:id="@+id/action_check_unsent_data_ofd"
        android:orderInCategory="120"
        android:title="@string/action_status_ofd"
        app:showAsAction="" />
    <item
        android:id="@+id/action_ofd_report"
        android:orderInCategory="130"
        android:title="@string/action_check_unsent_data_ofd"
        app:showAsAction="" />
    <item
        android:id="@+id/action_x_report"
        android:orderInCategory="150"
        android:title="@string/action_x_report"
        app:showAsAction="" />
    <item
        android:id="@+id/action_z_report"
        android:orderInCategory="200"
        android:title="@string/action_z_report"
        app:showAsAction="" />
</menu>
