<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ListView
        android:id="@+id/items_checked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_margin"
        android:layout_gravity="bottom"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/common_summ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/order_details_to_pay"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/common_payment_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/order_details_payment_description"
                android:textSize="14sp"
                android:textStyle="bold" />

        </TableRow>


    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_row_padding"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin"
            android:entries="@array/notification_types"
            android:prompt="@string/notification_prompt" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_toStartOf="@+id/notification"
            android:text="@string/notification_prompt" />
    </RelativeLayout>

</LinearLayout>